# youtube_analytics_project

./: pyproject.toml
data/: moscowpython.json
src/: channel.py  exceptions_yt.py  playlist.py  video.py  youtube.py
tests/: test_channel.py  test_playlist.py  test_video.py
